Fix spacing

--- a/app/styles/portfolio.scss
+++ b/app/styles/portfolio.scss
@@ -47,7 +47,7 @@ $sec-color: #FF9800;
 					a {
 						border-radius: 0;
 						display:block;
-						margin: 30px;
+						margin-top: 30px;
 						padding:10px 20px;
 						background-color:white;
 						color: black;
